[gd_scene load_steps=29 format=3 uid="uid://bb78eda5ojuxs"]

[ext_resource type="Script" path="res://Enemies/Bot/VFX/bot_death_particles.gd" id="1_a4an5"]
[ext_resource type="Texture2D" uid="uid://chhxpd32t4gp5" path="res://Enemies/Bot/Sprite/Bot Head.png" id="2_b3kt4"]
[ext_resource type="Texture2D" uid="uid://bberwgb1fkftk" path="res://Enemies/Bot/Sprite/Bot Left Arm.png" id="3_ccweq"]
[ext_resource type="Texture2D" uid="uid://cthvj2i6u33qs" path="res://Enemies/Bot/Sprite/Bot Right Arm.png" id="4_di5ka"]

[sub_resource type="Curve" id="Curve_spkw6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.26373, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o6qph"]
curve = SubResource("Curve_spkw6")

[sub_resource type="Curve" id="Curve_qk5mb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.395604), -3.72308, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_au26k"]
curve = SubResource("Curve_qk5mb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ghner"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 20.0
emission_ring_inner_radius = 0.0
angle_min = -90.0
angle_max = 90.0
initial_velocity_min = 50.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
damping_min = 300.0
damping_max = 300.0
scale_curve = SubResource("CurveTexture_au26k")
alpha_curve = SubResource("CurveTexture_o6qph")

[sub_resource type="Gradient" id="Gradient_ouvjw"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.141176, 0.137255, 0.137255, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tj5ko"]
gradient = SubResource("Gradient_ouvjw")
width = 4
height = 4

[sub_resource type="Curve" id="Curve_2h268"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.26374, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o36kb"]
curve = SubResource("Curve_2h268")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5feou"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 15.0
emission_ring_inner_radius = 0.0
angle_min = -90.0
angle_max = 90.0
initial_velocity_min = 50.0
initial_velocity_max = 200.0
damping_min = 300.0
damping_max = 300.0
alpha_curve = SubResource("CurveTexture_o36kb")

[sub_resource type="Gradient" id="Gradient_onl2i"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kvf4m"]
gradient = SubResource("Gradient_onl2i")
width = 4
height = 4

[sub_resource type="Curve" id="Curve_252ny"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6ncq8"]
curve = SubResource("Curve_252ny")

[sub_resource type="Curve" id="Curve_lgjiu"]
min_value = -30.0
max_value = 30.0
_data = [Vector2(0, 30), 0.0, -48.956, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vtocd"]
curve = SubResource("Curve_lgjiu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dle1m"]
particle_flag_disable_z = true
angle_min = -4.99999
angle_max = -4.99999
angle_curve = SubResource("CurveTexture_vtocd")
direction = Vector3(2, 1, 0)
spread = 30.0
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
damping_min = 200.0
damping_max = 250.0
alpha_curve = SubResource("CurveTexture_6ncq8")

[sub_resource type="Curve" id="Curve_5nwk2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t7v0o"]
curve = SubResource("Curve_5nwk2")

[sub_resource type="Curve" id="Curve_k4syf"]
min_value = -30.0
max_value = 30.0
_data = [Vector2(0, 30), 0.0, -48.956, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_etqji"]
curve = SubResource("Curve_k4syf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n0x7k"]
particle_flag_disable_z = true
angle_min = 5.00001
angle_max = 5.00001
angle_curve = SubResource("CurveTexture_etqji")
direction = Vector3(2, -1, 0)
spread = 30.0
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
damping_min = 200.0
damping_max = 250.0
alpha_curve = SubResource("CurveTexture_t7v0o")

[sub_resource type="Gradient" id="Gradient_8rs85"]
colors = PackedColorArray(1, 1, 1, 0.1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6nlnm"]
gradient = SubResource("Gradient_8rs85")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="BotDeathParticles" type="GPUParticles2D"]
process_mode = 3
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_ghner")
texture = SubResource("GradientTexture2D_tj5ko")
lifetime = 10.0
one_shot = true
explosiveness = 1.0
script = ExtResource("1_a4an5")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(2, -1)
rotation = 1.5708
texture = ExtResource("2_b3kt4")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D"]
position = Vector2(27, 18)
texture = ExtResource("3_ccweq")

[node name="Sprite2D3" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-27, 18)
texture = ExtResource("4_di5ka")

[node name="ColouredParticles" type="GPUParticles2D" parent="."]
position = Vector2(2, -1)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_5feou")
texture = SubResource("GradientTexture2D_kvf4m")
lifetime = 10.0
one_shot = true
explosiveness = 1.0

[node name="LeftArmParticle" type="GPUParticles2D" parent="."]
position = Vector2(2, 23)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_dle1m")
texture = ExtResource("3_ccweq")
one_shot = true

[node name="RightArmParticle" type="GPUParticles2D" parent="."]
position = Vector2(2, -25)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_n0x7k")
texture = ExtResource("4_di5ka")
one_shot = true

[node name="Flash" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_6nlnm")

[connection signal="finished" from="." to="." method="_on_finished"]
